# ClinicAdministration

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00e7f6cca017_add_appointments_calendar_foundation.py  65f7891a7fc7_add_authentication_foundation.py  698717db91c1_create_tenant_foundation.py  a3f7c9e21d05_add_staff_listing_indexes.py
backend/app/: main.py
backend/app/api/: appointments.py  auth.py  availability.py  calendar_blocks.py  clinic.py  health.py  provider_schedules.py  rooms.py  service_types.py  staff.py  tenant_context.py  tenant_scoped_records.py
backend/app/core/: audit.py  authorization.py  background_context.py  config.py  csrf.py  errors.py  identity.py  logging.py  passwords.py  rate_limit.py  scheduling_time.py  session_cookies.py  session_dependency.py  session_tokens.py  slug.py  tenant_context.py  timezone.py
backend/app/db/: base.py  qdrant_client.py  redis_client.py  session.py
backend/app/models/: __init__.py  appointment.py  appointment_service_type.py  auth_session.py  calendar_block.py  clinic_room.py  membership.py  one_time_token.py  provider_schedule.py  tenant.py  tenant_scoped_record.py  user_account.py
backend/app/repositories/: appointment.py  appointment_service_type.py  auth_session.py  tenant.py  (+7 more)
backend/tests/: auth_factories.py  calendar_factories.py  conftest.py  db_safety.py  factories.py  test_app.py  test_config.py  test_ready.py
(+123 files in other folders)
