[project]
name = "clinic-admin-backend"
version = "0.1.0"
description = "Clinic Admin Platform backend foundation (no business logic yet)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "qdrant-client>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends()-in-default-argument is the documented DI pattern, not a bug.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
exclude = ["^\\.venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
